// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload demo -- accept 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      accept="image/* , .pdf"
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- base 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- controlled 1`] = `
.c9 {
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c7 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c10 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c8 {
  vertical-align: baseline;
  margin-left: 5px;
  cursor: pointer;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          file1
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="uc-fe-icon icon__cross c8 c9"
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          file2
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="uc-fe-icon icon__cross c8 c9"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- disabled 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c1.c1 {
  border-color: #cccccc;
  background: #f7f7f7;
  color: #cccccc;
  cursor: not-allowed;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
  pointer-events: none;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
    disabled=""
  >
    <input
      disabled=""
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-button-disabled c1"
      disabled=""
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- handleUpload 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- listType 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
</div>
`;

exports[`Upload demo -- maxCount 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- maxSize 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- multiple 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- onAdd 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- onPreview 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- onRemove 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      multiple=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- readFile 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c7 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        你还未上传任何内容
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- selector 1`] = `
.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c3 .c5 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c1 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c2 {
  border: none;
}

<div>
  <div>
    <div
      class="c0"
    >
      <input
        hidden=""
        type="file"
      />
      <button>
        点我点我选
      </button>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          你还未上传任何内容
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- uncontrolled 1`] = `
.c9 {
  vertical-align: baseline;
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c7 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.c5 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c5 .c10 {
  color: #6b798e;
}

.c0 {
  display: inline-block;
  cursor: pointer;
}

.c2 {
  margin-left: 5px;
}

.c3 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c8 {
  vertical-align: baseline;
  margin-left: 5px;
  cursor: pointer;
}

.c4 {
  border: none;
}

<div>
  <div
    class="c0"
  >
    <input
      hidden=""
      type="file"
    />
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      请选择文件
    </button>
    <span
      class="c2"
    >
      请选择符合规则的文件
    </span>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile1
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="uc-fe-icon icon__cross c8 c9"
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile2
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="uc-fe-icon icon__cross c8 c9"
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile3
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="uc-fe-icon icon__cross c8 c9"
        />
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <div
        class="c6"
      >
        <a>
          defaultFile4
        </a>
      </div>
      <div
        class="c7"
      >
        <i
          class="uc-fe-icon icon__cross c8 c9"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Upload demo -- upload 1`] = `
.c18 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c18:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c23 {
  display: table-cell;
  vertical-align: middle;
}

.c22 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  background-color: #fcfcfd;
  border: 1px solid #c3cad9;
}

.c22 .c24 {
  color: #6b798e;
}

.c17 {
  display: inline-block;
  cursor: pointer;
}

.c19 {
  margin-left: 5px;
}

.c20 {
  max-height: 200px;
  overflow: auto;
  border: 1px solid #c3cad9;
  margin-top: 6px;
}

.c21 {
  border: none;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c14 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c7:hover {
  border-color: #3555f6;
}

.c7 .c13 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c7 .c15 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c7 .c8 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disableAdd
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disableRemove
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        enablePreview
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        onlyAcceptImage
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        maxSize
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        maxCount
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        customSelector
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        hideList
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c11"
            >
              OFF
            </span>
            <span
              class="c13 c14"
            >
              <span
                class="c15 c16"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c17"
      >
        <input
          hidden=""
          type="file"
        />
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c18"
          type="button"
        >
          请选择文件
        </button>
        <span
          class="c19"
        >
          请选择符合规则的文件
        </span>
      </div>
      <div
        class="c20"
      >
        <div
          class="c21 c22"
        >
          <div
            class="c23"
          >
            你还未上传任何内容
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
